--- a/own.css
+++ b/own.css
@@ -50,7 +50,7 @@ p{
 }
 #features
 {
-   background-image: url('https://images.app.goo.gl/C2a1ZrJpEEDf1y6h7');
+   background-image: url(https://images.app.goo.gl/C2a1ZrJpEEDf1y6h7);
     background-size: cover;
    background-repeat: no-repeat;
    
