--- a/own.css
+++ b/own.css
@@ -50,10 +50,10 @@ p{
 }
 #features
 {
-   background-image: url(https://images.app.goo.gl/C2a1ZrJpEEDf1y6h7);
-    background-size: cover;
+/*    background-image: url(https://images.app.goo.gl/C2a1ZrJpEEDf1y6h7);
+    background-size: cover; */
    background-repeat: no-repeat;
-   
+   background-color:#e0dce4;
     /* background-position: center;
     */
    padding: 7% 15%;
